# Academia-flow

./: .gitignore  .replit  README.md  app.py  pyproject.toml  replit.md
static/css/: style.css
static/js/: app.js
templates/: index.html
